Keep runtime installer compatible with minSdk 26